--- a/package.json
+++ b/package.json
@@ -1,37 +1,49 @@
 {
-  "scripts": {
-    "start": "webpack serve --env port=3000",
-    "build:prod": "webpack --env mode=production",
-    "build:dev": "webpack --env mode=development"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
-    "@babel/preset-react": "^7.22.5",
-    "@babel/preset-typescript": "^7.22.5",
-    "@types/node": "^20.4.5",
-    "@types/react-dom": "^18.2.7",
-    "@types/webpack-bundle-analyzer": "^4.6.0",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.8.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
-    "path": "^0.12.7",
-    "sass": "^1.64.1",
-    "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3",
-    "ts-loader": "^9.4.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
-    "webpack": "^5.88.2",
-    "webpack-bundle-analyzer": "^4.9.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  }
+    "scripts": {
+        "start": "webpack serve --env port=3000",
+        "build:prod": "webpack --env mode=production",
+        "build:dev": "webpack --env mode=development",
+        "lint:ts": "eslint \"**/*.{ts,tsx}\"",
+        "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
+        "lint:scss": "npx stylelint \"**/*.scss\"",
+        "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+        "prettier": "npx prettier --write **/*.{ts,tsx,json}"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.17.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.22.9",
+        "@babel/preset-env": "^7.22.9",
+        "@babel/preset-react": "^7.22.5",
+        "@babel/preset-typescript": "^7.22.5",
+        "@types/node": "^20.4.5",
+        "@types/react-dom": "^18.2.7",
+        "@types/webpack-bundle-analyzer": "^4.6.0",
+        "@typescript-eslint/eslint-plugin": "^6.9.0",
+        "babel-loader": "^8.2.3",
+        "css-loader": "^6.8.1",
+        "eslint": "^8.52.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-react": "^7.33.2",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.5.3",
+        "mini-css-extract-plugin": "^2.7.6",
+        "path": "^0.12.7",
+        "prettier": "^3.0.3",
+        "sass": "^1.64.1",
+        "sass-loader": "^13.3.2",
+        "style-loader": "^3.3.3",
+        "stylelint": "^15.11.0",
+        "stylelint-config-standard-scss": "^11.0.0",
+        "ts-loader": "^9.4.4",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6",
+        "webpack": "^5.88.2",
+        "webpack-bundle-analyzer": "^4.9.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^4.15.1"
+    }
 }
