--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
         "prettier": "npx prettier --write **/*.{ts,tsx,json}"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.7",
+        "axios": "^1.6.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-redux": "^8.1.3",
         "react-router-dom": "^6.17.0"
     },
     "devDependencies": {
@@ -25,6 +28,7 @@
         "@typescript-eslint/eslint-plugin": "^6.9.0",
         "babel-loader": "^8.2.3",
         "css-loader": "^6.8.1",
+        "dotenv": "^16.3.1",
         "eslint": "^8.52.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-react": "^7.33.2",
