--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.1.3",
+        "react-redux-toastr": "^7.6.12",
         "react-router-dom": "^6.17.0"
     },
     "devDependencies": {
@@ -24,6 +25,7 @@
         "@babel/preset-typescript": "^7.22.5",
         "@types/node": "^20.4.5",
         "@types/react-dom": "^18.2.7",
+        "@types/react-redux-toastr": "^7.6.4",
         "@types/webpack-bundle-analyzer": "^4.6.0",
         "@typescript-eslint/eslint-plugin": "^6.9.0",
         "babel-loader": "^8.2.3",
