--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "react-dom": "^18.2.0",
         "react-redux": "^8.1.3",
         "react-redux-toastr": "^7.6.12",
-        "react-router-dom": "^6.17.0"
+        "react-router-dom": "^6.17.0",
+        "react-virtuoso": "^4.6.2"
     },
     "devDependencies": {
         "@babel/core": "^7.22.9",
